# CoursAI

./: .gitignore  CLAUDE.md  CoursAI.vbs  README.md  electron.vite.config.ts  package-lock.json  package.json  postcss.config.js  start.bat  tsconfig.json
.obsidian/: appearance.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
.obsidian/snippets/: no-strike-completed-tasks.css  no-strikethrough.css  table-header-color.css  text-highlight-colors.css  wider-content.css
app/: tailwind.config.ts
app/src/main/: index.ts  pythonBridge.ts
app/src/preload/: index.ts
app/src/renderer/: index.html
app/src/renderer/src/: App.tsx  main.tsx
app/src/renderer/src/api/: client.ts  types.ts
app/src/renderer/src/components/: ModuleCard.tsx  PageHeader.tsx  PracticeCard.tsx  Sidebar.tsx  WeekCard.tsx
app/src/renderer/src/lib/: uiScale.ts
app/src/renderer/src/routes/: Backlog.tsx  Course.tsx  (+5 more)
backend/: pyproject.toml  requirements.txt
backend/.data/: coursai.db
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/parsing/: checklists.py  course.py  loader.py  tables.py
backend/app/services/: merge.py  overview.py
backend/app/store/: db.py  models.py
backend/tests/: test_api.py  test_course.py  test_loader.py  test_merge.py  test_store.py  test_tables_checklists.py
docs/: aimarket-dashboard.md  course-ml-training.md  ml-training-practice-log.md  project.md  rag-mvp-spec.md  solo-90-day-execution-backlog.md  solo-monetization-plan.md
docs/tasks/: implementation-backlog.md  prompt-generate-implementation-backlog.md
(+1 files in other folders)
